[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_python_package"
version = "0.0.1"
authors = [
  { name="Juan Estevez", email="juan.estevez@ucalgary.ca" },
]
description = "An example Python package for GOPH 419 Lab 0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "matplotlib",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/USERNAME/goph419-f2025-lab00-stJEM"
